# simple_robot

./: CHANGELOG  LICENSE  README.md
robot_control2/: CMakeLists.txt  package.xml
robot_control2/src/: innocontroller2.cpp  innocontroller_ref.cpp  punkty.cpp  robotnik2.cpp
robot_control2/srv/: reference.srv
robot_pose_ekf/launch/: robot_pose_ekf.launch
robot_pose_ekf/src/: odom_estimation_node.cpp
simple_mapping/: CMakeLists.txt  package.xml
simple_mapping/launch/: gmapping_launch.launch
simple_mapping/params/: gmapping_params.yaml
simple_robot/: CMakeLists.txt  package.xml
simple_robot/launch/: robot.launch
simple_robot_control/: CMakeLists.txt  package.xml
simple_robot_control/config/: diff_drive_parameters.yaml  diff_drive_parameters_4wheels.yaml  robot_localization.yaml  robot_localization2.yaml  robot_localization3.yaml
simple_robot_control/launch/: controller.launch  controller_2wheels.launch  controller_4wheels.launch  diff_drive_controller.launch  keyboard_teleop.launch  manual_control_2wheels.launch  manual_control_4wheels.launch  mock_velocities.launch  robot_localisation.launch  robot_pose_ekf.launch  test_velocities.launch  test_velocities_2wheels.launch  test_velocities_4wheels.launch  twist_to_motors.launch  twist_to_motors_2wheels.launch  twist_to_motors_4wheels.launch
simple_robot_control/scripts/: diff_drive_controller.py  mock_velocities.py  test_velocities.py  twist_to_motors.py
simple_robot_control/src/: controller.cpp  waypoints_generator.cpp
simple_robot_description/: CMakeLists.txt  odom.rviz  package.xml
simple_robot_description/launch/: description.launch  view_mobile_robot.launch
simple_robot_description/urdf/: diff_wheeled_robot.gazebo  diff_wheeled_robot.xacro  wheel.urdf.xacro
simple_robot_description_2wheels/: CMakeLists.txt  odom_tests.rviz  package.xml  robot_localisation.rviz  robot_pose_ekf.rviz
simple_robot_description_2wheels/launch/: description.launch  view_mobile_robot.launch  view_mobile_robot_with_gazebo.launch  view_mobile_robot_with_gazebo_robot_ekf.launch
simple_robot_description_2wheels/urdf/: diff_wheeled_robot.gazebo  diff_wheeled_robot.xacro  wheel.urdf.xacro
simple_robot_description_4wheels/: CMakeLists.txt  package.xml
simple_robot_description_4wheels/launch/: description.launch  view_mobile_robot.launch  view_model.launch
simple_robot_description_4wheels/rviz_config/: model_view.rviz
simple_robot_description_4wheels/urdf/: robot_4wheels.gazebo  robot_4wheels.urdf.xacro
simple_robot_gazebo/: CMakeLists.txt  package.xml
simple_robot_gazebo/config/: general_parameters.yaml  motors_parameters.yaml
simple_robot_gazebo/include/simple_robot_gazebo/: encoders_ticks.hh  ground_truth_pose.hh  move_wheels.hh  odom.hh
simple_robot_gazebo/launch/: diff_wheeled_gazebo.launch  ground_truth_bridge.launch  robot_2wheels.launch  robot_4wheels.launch
simple_robot_gazebo/msg/: encoders.msg
simple_robot_gazebo/plugins/: encoders_ticks.cc  move_wheels.cc  odom.cc
simple_robot_gazebo/src/: ground_truth_pose.cpp
simple_robot_gazebo/worlds/: labyrinth.world
simple_robot_hardware_interface/: CMakeLists.txt  package.xml
simple_robot_hardware_interface/launch/: twist_to_motors_2wheels.launch  twist_to_motors_4wheels.launch
simple_robot_hardware_interface/src/: twist_to_motors.py
simple_robot_tests/: CMakeLists.txt  package.xml
simple_robot_tests/launch/: test_cmdvel_2wheels.launch  test_hardware_interface_2wheels.launch  test_hardware_interface_4wheels.launch
simple_robot_tests/src/: move_server.py  quat_to_euler.py  test_cmdvel.py  test_hardware_interface.py  test_odometry.py
