<?xml version="1.0"?>
<package>
  <name>simple_mapping</name>
  <version>0.0.1</version>
  <description>The simple_mapping package</description>

  <author email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</author>
  <maintainer email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
