<?xml version="1.0"?>
<package>
  <name>simple_robot_control</name>
  <version>0.0.9</version>
  <description>The simple_robot_control package</description>

  <maintainer email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</maintainer>

  <license>BSD</license>

  <author email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
