<?xml version="1.0"?>
<package>
  <name>simple_robot_control</name>
  <version>0.2.5</version>
  <description>The simple_robot_control package</description>

  <maintainer email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</maintainer>
  <maintainer email="artur.gmerek@innotecuk.com">Artur Gmerek</maintainer>

  <license>BSD</license>

  <author email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</author>
  <author email="artur.gmerek@innotecuk.com">Artur Gmerek</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>

</package>
