<?xml version="1.0"?>
<package>
  <name>simple_robot_control</name>
  <version>0.2.7</version>
  <description>The simple_robot_control package</description>

  <author email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>

  <export>
  </export>

</package>
