<?xml version="1.0"?>
<package>
  <name>simple_robot_description</name>
  <version>0.0.6</version>
  <description>The mastering_ros_robot_description_pkg package</description>

  <maintainer email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</maintainer>

  <license>BSD</license>

  <author email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
