<?xml version="1.0"?>
<package>
  <name>simple_robot_description_4wheels</name>
  <version>0.2.7</version>
  <description>The simple_robot_description_4wheels package</description>

  <author email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</author>
  <maintainer email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>

</package>
