<?xml version="1.0"?>
<package format="2">
  <name>simple_robot_hardware_interface</name>
  <version>0.0.1</version>
  <description>The simple_robot_hardware_interface package</description>

  <maintainer email="angelos.plastropoulos@innotecuk.com">Angelos Plastropoulos</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>

</package>
